name:                 haskellIncubation
version:              0.1.0.0
synopsis:             Haskell incubation project
-- description:
-- license:
-- license-file:
homepage:
author:               Andrei Lenkei
maintainer:           andrei@lenkei.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable haskellIncubation
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
